alignment issues in amount page

--- a/app/assets/stylesheets/campaigns.css.scss
+++ b/app/assets/stylesheets/campaigns.css.scss
@@ -383,9 +383,11 @@
     word-wrap: break-word;
   }
   .donation_heading {
-    width: 70%;
+    width: 73%;
     min-width: 205px;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
     height: 20px;
   }
   .payment_div {
